--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 .hero {
-    background: url('/img/hero-img.jpg');
+    background: url('img/hero-img.jpg');
     background-size: cover;
 }
 
